# bendahl-eBPF-Evaluation

./: .gitignore  .gitmodules  LICENSE  README.md
aya/: README.md
aya/comtrace/: Cargo.toml  Makefile  README.md
aya/comtrace/.vim/: coc-settings.json
aya/comtrace/comtrace/: Cargo.toml
aya/comtrace/comtrace-common/: Cargo.toml
aya/comtrace/comtrace-common/src/: lib.rs
aya/comtrace/comtrace-ebpf/: Cargo.toml
aya/comtrace/comtrace-ebpf/src/: main.rs
aya/comtrace/comtrace/src/: main.rs
aya/comtrace/xtask/src/: build_ebpf.rs  run.rs
aya/jittergen/: Cargo.toml  README.md  Vagrantfile  config.yml
aya/jittergen/.vim/: coc-settings.json
aya/jittergen/jittergen/: Cargo.toml
aya/jittergen/jittergen-common/: Cargo.toml
aya/jittergen/jittergen-common/src/: lib.rs
aya/jittergen/jittergen-ebpf/: Cargo.toml
aya/jittergen/jittergen-ebpf/src/: main.rs
aya/jittergen/jittergen/src/: main.rs
aya/jittergen/xtask/src/: build_ebpf.rs  run.rs
aya/loadbalancer/: Makefile  README.md  Vagrantfile
aya/loadbalancer/.vim/: coc-settings.json
aya/loadbalancer/loadbalancer/: Cargo.toml
aya/loadbalancer/loadbalancer-common/: Cargo.toml
aya/loadbalancer/loadbalancer-common/src/: lib.rs
aya/loadbalancer/loadbalancer-ebpf/: Cargo.toml  rust-toolchain.toml
aya/loadbalancer/loadbalancer-ebpf/src/: main.rs
aya/loadbalancer/loadbalancer/src/: main.rs
aya/lsmbpf/: Cargo.toml  Makefile  README.md  Vagrantfile
aya/lsmbpf/.vim/: coc-settings.json
aya/lsmbpf/lsmbpf/: Cargo.toml
aya/lsmbpf/lsmbpf-common/: Cargo.toml
aya/lsmbpf/lsmbpf-ebpf/: Cargo.toml
aya/lsmbpf/lsmbpf-ebpf/src/: main.rs
aya/lsmbpf/lsmbpf/src/: main.rs
aya/lsmbpf/xtask/src/: build_ebpf.rs  run.rs
aya/packetfilter/: Cargo.toml  Makefile  README.md  Vagrantfile
aya/packetfilter/.vim/: coc-settings.json
aya/packetfilter/packetfilter/: Cargo.toml
aya/packetfilter/packetfilter-common/: Cargo.toml
aya/packetfilter/packetfilter-ebpf/: Cargo.toml
aya/packetfilter/packetfilter-ebpf/src/: main.rs
aya/packetfilter/packetfilter/src/: main.rs
aya/packetfilter/xtask/src/: build_ebpf.rs  run.rs
ebpf/: README.md
ebpf/comtrace/: Makefile  Vagrantfile  comtrace.bpf.c  go.mod  main.go
ebpf/jittergen/: Makefile  Vagrantfile  config.yml  go.mod  go.sum  jittergen.bpf.c  main.go  tcwrapper.go  udpsender.py
ebpf/loadbalancer/: Makefile  Vagrantfile  go.mod  loadbalancer.bpf.c  main.go
ebpf/lsmbpf/: Makefile  Vagrantfile  go.mod  go.sum  main.go
ebpf/packetfilter/: Makefile  config.yml  go.mod  go.sum  main.go  paketfilter.bpf.c
libbpf/: .gitignore  README.md
libbpf/comtrace/: CMakeLists.txt  Makefile  Vagrantfile  common_types.h  comtrace.bpf.c  comtrace.cpp  comtrace.h
libbpf/jittergen/: CMakeLists.txt  Makefile  common_types.h  jittergen.bpf.c  jittergen.cpp  jittergen.h
libbpf/loadbalancer/: CMakeLists.txt  Makefile  Vagrantfile  loadbalancer.bpf.c  loadbalancer.cpp  loadbalancer.h
libbpf/lsmbpf/: CMakeLists.txt  Makefile  Vagrantfile  lsmbpf.bpf.c  lsmbpf.cpp
libbpf/packetfilter/: CMakeLists.txt  Makefile  Vagrantfile  common_types.h  packetfilter.bpf.c  packetfilter.cpp  packetfilter.h
libbpfgo/: README.md
libbpfgo/comtrace/: Makefile  Vagrantfile  bpftypes.go  comtrace.bpf.c  go.mod  go.sum  main.go
libbpfgo/jittergen/: Makefile  Vagrantfile  bpftypes.go  config.yml  go.mod  go.sum  jittergen.bpf.c  main.go  tcwrapper.go
libbpfgo/loadbalancer/: Makefile  Vagrantfile  bpftypes.go  config.yml  go.mod  loadbalancer.bpf.c  main.go
libbpfgo/lsmbpf/: Makefile  Vagrantfile  go.mod  lsmbpf.bpf.c  main.go
libbpfgo/packetfilter/: Makefile  bpftypes.go  go.mod  main.go  packetfilter.bpf.c
libbpfrs/: .gitignore  README.md
libbpfrs/comtrace/: Cargo.toml  Makefile  build.rs  comtrace.bpf.c
libbpfrs/comtrace/src/: main.rs
libbpfrs/jittergen/: Cargo.toml  Makefile  build.rs  config.yml  jittergen.bpf.c
libbpfrs/jittergen/src/: main.rs
libbpfrs/loadbalancer/: Cargo.toml  Makefile  Vagrantfile  build.rs  loadbalancer.bpf.c
libbpfrs/loadbalancer/src/: main.rs
libbpfrs/lsmbpf/: Cargo.toml  Makefile  Vagrantfile  build.rs
libbpfrs/lsmbpf/src/: main.rs
libbpfrs/packetfilter/: Cargo.toml  Makefile  Vagrantfile  build.rs  packetfilter.bpf.c
libbpfrs/packetfilter/src/: main.rs
redbpf/: README.md
redbpf/jittergen/: Cargo.toml  Makefile
redbpf/jittergen/probes/: Cargo.toml
redbpf/jittergen/probes/src/: lib.rs
redbpf/jittergen/probes/src/jittergen/: main.rs
redbpf/jittergen/src/: main.rs
redbpf/loadbalancer/: Cargo.toml  Makefile  Vagrantfile
redbpf/loadbalancer/probes/: Cargo.toml
redbpf/loadbalancer/probes/src/: lib.rs
redbpf/loadbalancer/probes/src/loadbalancer/: main.rs
redbpf/loadbalancer/src/: main.rs
redbpf/packetfilter/: Cargo.toml  Makefile  Vagrantfile  config.yml
redbpf/packetfilter/probes/: Cargo.toml
redbpf/packetfilter/probes/src/: lib.rs
redbpf/packetfilter/probes/src/packetfilter/: main.rs
redbpf/packetfilter/src/: main.rs
scripts/: README.md  contributors_and_commits.py  files_per_commit.py  quantiles.py  ticket_statistics.py
