[package]
name = "loadbalancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.2.5"
libbpf-rs = "0.20.1"
network-interface = "1.0.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_yaml = "0.9.19"

[build-dependencies]
libbpf-cargo = "0.20.1"
