[package]
name = "packetfilter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.2.5"
ipnet = "2.7.1"
libbpf-rs = { version = "0.20.1"}
network-interface = "1.0.0"
plain = "0.2.3" # required for ::from_bytes()
serde = { version = "1.0.156", features = ["derive"] }
serde_yaml = "0.9.19"

[build-dependencies]
libbpf-cargo = "0.20.1"
