[package]
name = "jittergen-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", rev = "4f85ff8a7ba5f327eb9225f7633e620cedfb9051" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "4f85ff8a7ba5f327eb9225f7633e620cedfb9051" }
jittergen-common = { path = "../jittergen-common" }
network-types = "0.0.4"

[[bin]]
name = "jittergen"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
