[package]
name = "jittergen"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = "0.11.0", features=["async_tokio"] }
aya-log = "0.1"
jittergen-common = { path = "../jittergen-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_yaml = "0.9.19"
network-types = "0.0.4"

[[bin]]
name = "jittergen"
path = "src/main.rs"
